# sing

./: .flaskenv  .gitignore  README.md  pyproject.toml
instance/: sing.db  test.db
sing/: __init__.py  forms.py  pyproject.toml  settings.py
sing/blueprints/: singer.py  track.py  user.py
sing/static/: output.css
sing/static/front/: index.html  package-lock.json  package.json
sing/static/front/src/: App.svelte  app.css
sing/templates/: base.html  track_all.html  update_track.html
